# ThinkZone

./: README.md
ThinkZone-Client/: ThinkZone.pro  comunicator.cpp  comunicator.h  database.cpp  database.h  inputtesto.cpp  inputtesto.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  superstring.cpp  superstring.h
ThinkZone-cpp/: CMakeLists.txt  ThinkZone-cpp.kdev4  comunicator.cpp  comunicator.h  main.cpp  mainwindow.cpp  mainwindow.h  superstring.cpp  superstring.h  thinkzoneapp.cpp  thinkzoneapp.h
ThinkZone-server/: .gitignore  README.txt  ThinkZone  ThinkZone-server  ThinkZoneServer  ThinkZoneServer.go  build.sh  clean.sh  cominication_grammar.y  database.go  database.post.go  doc.go  doc.sh  install.sh  main.go  makefile  populate.sh  server.go  superstring.go  superstring_test.go
ThinkZone-server/src/cmd/ThinkZoneServer/: ThinkZoneServer.go  ThinkZoneServer.go~
Thinkzone-gui/: README  start_gui.sh  start_linux.sh  start_windows.bat
Thinkzone-gui/gui/: MainWindow.py  about.py  about.ui  aboutDialog.py  conversations.ui  finestraprincipale.py  immagini_rc.py  login.py  loginDialog.py  mainwindow.ui
Thinkzone-gui/rete/: Comunicazione.py
Thinkzone-gui/src/: main.py
Thinkzone-gui/src/gui/: MainWindow.py  about.py  about.ui  aboutDialog.py  conversations.ui  finestraprincipale.py  login.ui  loginDialog.py
Thinkzone-gui/src/rete/: Comunicazione.py
Thinkzone-gui/src/utils/: PostArea.py  PostWidget.py
Thinkzone-gui/test/: communicationtest.py  test.py
Thinkzone-gui/utils/: PostArea.py  PostWidget.py  PostWidget.ui  postwidget.py
(+16 files in other folders)
